--- a/client/src/app/pages/saved-jobs/saved-jobs.component.html
+++ b/client/src/app/pages/saved-jobs/saved-jobs.component.html
@@ -191,7 +191,7 @@
           <action-button class="position-search-reload-result" color="primary" title="Apply Selected"
             (click)="applySelected()">
           </action-button>
-          <action-button class="position-search-reload-result" color="primary" title="Unsave selected"
+          <action-button class="position-search-reload-result" color="primary" title="Unsave Selected"
             (click)="unSaveSelected()">
           </action-button>
           <action-button class="position-search-reload-result" color="primary" title="Reload Results"
