Application-cover-letter page is completed.

--- a/client/src/app/components/interest-level-popup/interest-level-popup.component.html
+++ b/client/src/app/components/interest-level-popup/interest-level-popup.component.html
@@ -1,6 +1,5 @@
 <div class="dialog-box">
-  <p> You already appear to have an application with this specified interest level. Would you like to set the interest
-    for the other position to 0 and the selected one to {{interestLevelData.level}}.</p>
+  <p>You already appear to have an application with this specified interest level. Would you like to set the interest for the other position to 0 and the selected one to {{interestLevelData.level}}?</p>
 
   <div class="application-btn-center">
     <action-button class="application-no-thanks-btn " type="flat" title="No Thanks" color="warning"
