Fix company logo style

--- a/client/src/app/pages/company/companies/companies.component.html
+++ b/client/src/app/pages/company/companies/companies.component.html
@@ -106,7 +106,7 @@
                         <div class="header-container">
                             <div class="company-info">
                                 <div class="image"><img
-                                        [src]="company.company_logo ? company.company_logo: 'assets/icons/no_photo.png'"></div>
+                                        [src]="company.company_logo ? company.company_logo : 'assets/icons/ic_default_company_logo.svg'"></div>
                                 <div class="info">
                                     <a routerLink="/company/{{ company.company_id }}/profile"
                                         [queryParams]="{showBackButton: 'true'}">
