--- a/client/src/app/pages/company/companies/companies.component.scss
+++ b/client/src/app/pages/company/companies/companies.component.scss
@@ -74,6 +74,28 @@ a {
           border-bottom: 1px solid map-get($md-cfaccent, 50);
           margin-bottom: 5px;
           border-radius: 5px;
+
+          h5.about-company {
+            font-family: 'Poppins-Regular', sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            line-height: 21px;
+            margin-top: 0;
+            margin-bottom: 10px;
+            color: rgba(map-get($md-cfaccent, 500), .34);
+          }
+
+          p.about-company {
+            font-family: 'Roboto', sans-serif;
+            font-weight: 400;
+            font-style: normal;
+            font-size: 14px;
+            line-height: 22px;
+            margin-top: 0;
+            margin-bottom: 10px;
+            color: rgba(map-get($md-cfaccent, 500), .54);
+          }
       
           a {
             text-decoration: none;
