--- a/client/src/app/pages/company/companies/companies.component.html
+++ b/client/src/app/pages/company/companies/companies.component.html
@@ -142,23 +142,25 @@
                             </div>
                         </div>
                         <h5 class="about-company">About Company</h5>
-                        <p class="about-company">
-                            {{company.company_desc | slice:0:maxDescriptionLength}}<span *ngIf="company.company_desc.length>maxDescriptionLength">...</span>
-                        </p>
-                        <div class="show-button">
-                            <action-button *ngIf="maxDescriptionLength === 220 && company.company_desc.length>220"
-                                routerLink="." 
-                                type="text" 
-                                title="Show More" 
-                                color="primary" 
-                                (click)="maxDescriptionLength=1000"></action-button>
-                            <action-button *ngIf="maxDescriptionLength === 1000"
-                                routerLink="." 
-                                type="text" 
-                                title="Show Less" 
-                                color="primary" 
-                                (click)="maxDescriptionLength=220"></action-button>
-                        </div>
+                        <ng-container *ngIf="maxDescriptionLength; let maxDescription">
+                            <p class="about-company">
+                                {{company.company_desc | slice:0:maxDescription}}<span *ngIf="company.company_desc.length>maxDescription">...</span>
+                            </p>
+                            <div class="show-button">
+                                <action-button *ngIf="maxDescription === maxDescriptionLength && company.company_desc.length > maxDescriptionLength"
+                                    routerLink="." 
+                                    type="text" 
+                                    title="Show More" 
+                                    color="primary" 
+                                    (click)="maxDescription=company.company_desc.length"></action-button>
+                                <action-button *ngIf="maxDescription === company.company_desc.length"
+                                    routerLink="." 
+                                    type="text" 
+                                    title="Show Less" 
+                                    color="primary" 
+                                    (click)="maxDescription=maxDescriptionLength"></action-button>
+                            </div>
+                        </ng-container>
                     </div>
                 </div>
             </ng-container>
